<resources>
    <string name="app_name">MQOS</string>
    <string name="default_text_btn_config">SERVER</string>
    <string name="run_btn_text">RUN</string>
    <string name="stop_btn_text">STOP</string>
    <string name="menu_drawer_open">drawer open</string>
    <string name="menu_drawer_close">drawer close</string>
    <string name="label_iperf_interval">Interval</string>
    <string name="label_iperf_time">Time</string>
    <string name="label_iperf_udp">UDP</string>
    <string name="label_iperf_cible">Server IP</string>
    <string name="label_iperf_server_mode">Mode server</string>
    <string name="label_iperf_client_mode">Mode client</string>
    <string name="label_iperf_mode">Mode</string>
    <string name="iperf_mode_client">Client</string>
    <string name="iperf_mode_server">Server</string>
    <string name="btn_clear_text">CLEAR</string>
</resources>